objects/ASI_KOR_SR_Proposal_Detail__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Actual_Basic_Cost__c</fullName>
        <label>Actual Basic Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Pre_Payment_Amount__c</fullName>
        <label>Actual Pre-Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Pre_payment_Volume__c</fullName>
        <label>Actual Pre-payment Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_1_Month_Ago__c</fullName>
        <label>Actual Volume (1 Month Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_2_Months_Ago__c</fullName>
        <label>Actual Volume (2 Months Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_wo_Pre_payment__c</fullName>
        <label>Actual Volume w/o Pre-payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch_Approval_Status__c</fullName>
        <formula>text(ASI_KOR_SR_Proposal_ID__r.ASI_KOR_BM_Proposal_Header__r.ASI_KOR_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipName>ASI_KOR_SR_Proposal_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Status__c</fullName>
        <formula>if (ASI_KOR_System_Generated__c, &apos;&apos;, 
  if( ASI_KOR_Proposal_Unit_Cost_Basic_CA__c &gt;= ASI_KOR_Cap_Unit_Cost_Basic__c , 
    &quot;Exceed Scheme&quot;, 
    &quot;Within Scheme&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Business_Rationale__c</fullName>
        <label>Rationale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Cap_Total_Basic_CA__c</fullName>
        <formula>ASI_KOR_Cap_Unit_Cost_Basic__c + ASI_KOR_Cap_Unit_Cost_CA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cap Total (Basic+CA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Cap_Unit_Cost_Basic__c</fullName>
        <label>Scheme Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Cap_Unit_Cost_CA__c</fullName>
        <label>Cap Unit Cost (CA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Category__c</fullName>
        <formula>ASI_KOR_Brand__r.ASI_KOR_Product_Categoray__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Channel__c</fullName>
        <formula>TEXT( ASI_KOR_Venue__r.ASI_KOR_Venue_Pillar__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pillar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Exceed_Amount__c</fullName>
        <formula>(ASI_KOR_Proposal_Unit_Cost_Basic_CA__c-ASI_KOR_Cap_Unit_Cost_Basic__c)*ASI_KOR_Target_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Basic_Cost__c</fullName>
        <formula>if( ASI_KOR_System_Generated__c ,  ASI_KOR_Actual_Basic_Cost__c , ASI_KOR_Cap_Unit_Cost_Basic__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Basic Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_From_Prepayment_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Prepayment Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Grade__c</fullName>
        <formula>TEXT(ASI_KOR_Venue__r.ASI_KOR_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Growth__c</fullName>
        <formula>if((ISBLANK(ASI_KOR_Last_3_month_Actual_Average_Volu__c) || ASI_KOR_Last_3_month_Actual_Average_Volu__c == 0),0,ASI_KOR_Target_Volume__c /  ASI_KOR_Last_3_month_Actual_Average_Volu__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Incentive_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incentive Scheme</label>
        <referenceTo>ASI_KOR_Incentive_Scheme__c</referenceTo>
        <relationshipName>ASI_KOR_SR_Proposal_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Individual_Venue_Status__c</fullName>
        <formula>/* before KR CRM P4.2
if (ASI_KOR_System_Generated__c, &apos;&apos;, if( ASI_KOR_Proposal_Unit_Cost_Basic_CA__c &lt;  ASI_KOR_Cap_Unit_Cost_Basic__c , &quot;Too Small&quot;, if( ASI_KOR_Proposal_Unit_Cost_Basic_CA__c &gt;  ASI_KOR_Cap_Total_Basic_CA__c , &quot;Exceed Budget&quot;, &quot;Within Budget&quot;
)))
*/
if (ASI_KOR_System_Generated__c, &apos;&apos;, if( ASI_KOR_Proposal_Unit_Cost_Basic_CA__c &gt; ASI_KOR_Cap_Unit_Cost_Basic__c , &quot;Exceed Budget&quot;, &quot;Within Budget&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Is_Pre_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pre-payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Last_3_month_Actual_Average_Volu__c</fullName>
        <label>P3M Act. Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Last_3_month_Actual_average_UC__c</fullName>
        <label>P3M Act. Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_National_Approval_Status__c</fullName>
        <formula>text(ASI_KOR_SR_Proposal_ID__r.ASI_KOR_BM_Proposal_Header__r.ASI_KOR_RSD_Proposal_Header__r.ASI_KOR_NSD_Proposal_Header__r.ASI_KOR_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Proposal_Unit_Cost_Basic_CA__c</fullName>
        <label>Planned Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Proposal_Unit_Cost_CA_Only__c</fullName>
        <formula>if (ASI_KOR_System_Generated__c, null, ASI_KOR_Proposal_Unit_Cost_Basic_CA__c - ASI_KOR_Cap_Unit_Cost_Basic__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Unit Cost (CA Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Regional_Approval_Status__c</fullName>
        <formula>text( ASI_KOR_SR_Proposal_ID__r.ASI_KOR_BM_Proposal_Header__r.ASI_KOR_RSD_Proposal_Header__r.ASI_KOR_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Roll_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll-up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SR_Proposal_By_Brand__c</fullName>
        <label>SR Proposal By Brand</label>
        <referenceTo>ASI_KOR_SR_Proposal_By_Brand__c</referenceTo>
        <relationshipLabel>SR Sales Planning Details</relationshipLabel>
        <relationshipName>ASI_KOR_SR_Proposal_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SR_Proposal_ID__c</fullName>
        <label>SR Sales Planning</label>
        <referenceTo>ASI_KOR_SR_Proposal_Header__c</referenceTo>
        <relationshipLabel>SR Sales Planning Details</relationshipLabel>
        <relationshipName>ASI_KOR_SR_Proposal_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_CA_Amount_excl_Basic__c</fullName>
        <formula>if (ASI_KOR_System_Generated__c, null, ASI_KOR_Target_Volume__c * ( ASI_KOR_Proposal_Unit_Cost_Basic_CA__c -  ASI_KOR_Cap_Unit_Cost_Basic__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CA (excl. Basic)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Incentive_Amount_Proposal__c</fullName>
        <formula>ASI_KOR_Target_Volume__c *  ASI_KOR_Proposal_Unit_Cost_Basic_CA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_1_Month_Ago__c</fullName>
        <label>Total VI (1 Month Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_2_Months_Ago__c</fullName>
        <label>Total VI (2 Months Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <formula>/* before P4.2
ASI_KOR_Incentive_Scheme__r.ASI_KOR_UOM__c
*/
Text(ASI_KOR_Brand__r.ASI_KOR_UOM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_1_Month_Ago__c</fullName>
        <formula>ASI_KOR_Total_VI_1_Month_Ago__c / if(ASI_KOR_Actual_Volume_1_Month_Ago__c=0, 1, ASI_KOR_Actual_Volume_1_Month_Ago__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost (1 Month Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_Cap_Actual_Volume__c</fullName>
        <label>Unit Cost Cap Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Unit_Cost_Exception__c</fullName>
        <formula>IF( ASI_KOR_Is_Pre_payment__c=false &amp;&amp; ASI_KOR_Proposal_Unit_Cost_Basic_CA__c &gt;  ASI_KOR_Cap_Unit_Cost_Basic__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Code__c</fullName>
        <formula>ASI_KOR_Venue__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ASI_KOR_SR_Proposal_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>SR Sales Planning Detail</label>
    <nameField>
        <displayFormat>SRPI-{000000000}</displayFormat>
        <label>SR Sales Planning Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Sales Planning Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>